#6 Now properly supports multiple snippet calls per page.
Get rid of the rank (amt of points) in the default tplRow chunk.
Add support for Russian. Thanks createit!

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.1.2-pl         ++
++         Released: 21/01/2012   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Fix including deleted resources by adding &includeDeleted property defaulting to false.
Add &hideContainers property to allow filtering out of containers.
Prevent E_NOTICE errors on calculating the scores.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.1.1-pl         ++
++         Released: 10/12/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Fix issue with &parents which wouldn't find direct descendants.
Prevent error messages (and possible failure) if only one resource field is chosen.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.1.0-pl         ++
++         Released: 04/12/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Add new exclude property to exclude specific resources from the output.
Add new returnTVs property to include TV values in the snippet output. 

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.2-pl2        ++
++         Released: 10/11/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
(pl2) Fix bug which would include all resources if no resource fields are used in the &fields property.
Fix bug which didn't filter out the current resource properly by refactoring the query.
Make sure the debug data being spit out is actually usable and not just one blurb of data.
Make sure tags are checked in a case insensitive manner to improve dataset. Fixes lack of results on some configurations.