@@ -1,3 +1,4 @@
+#4 Add &stopwords property to exlude stopwords on a snippet-call basis.
 #6 Now properly supports multiple snippet calls per page.
 Get rid of the rank (amt of points) in the default tplRow chunk.
 Add support for Russian. Thanks createit!
